syntax = 'proto3';

package proto;

message Address {
  string id = 1;
  string zipcode = 2;
  string prefecture_phonetic = 3;
  string city_phonetic = 4;
  string town_area_phonetic = 5;
  string additional_area_phonetic = 6;
  string prefecture = 7;
  string city = 8;
  string town_area = 9;
  string additional_area = 10;
}
